src/app.css
.app {
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}
.top-left-options {
  top: 0;
  left: 0;
  position: absolute;
  margin: 2rem;
}

.slider-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  width: 13rem;
}

.slider-container > * {
  text-align: center;
  width: 13rem;
}

